--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
         <item>RotateDown</item>
         <item>Accordion</item>
     </string-array>
+    <string name="menu_home_feed">Home Feed</string>
+    <string name="menu_posts">Posts</string>
+    <string name="menu_following">Following</string>
+    <string name="menu_followers">Followers</string>
+    <string name="menu_liked_post">Liked Posts</string>
 </resources>
